--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque rerum placeat ea dolorum velit porro magnam laboriosam tenetur tempora, deserunt, sed perspiciatis, dicta sit autem laudantium totam expedita odio! Vel?</p>
             <h3>price:40</h3>
             <button>Buy Now</button>
+        <div class="box">
+            <source><img src="image/logo_1.png"alt="logo">
+            <h3>item13</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque rerum placeat ea dolorum velit porro magnam laboriosam tenetur tempora, deserunt, sed perspiciatis, dicta sit autem laudantium totam expedita odio! Vel?</p>
+            <h3>price:40</h3>
+            <button>Buy Now</button>
         </div>
     </div>
 </body>
